--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="section-one">
+        <div class="navbar">
+            <div class="navbar-logo">
+                Header Logo
+            </div>
+            <div class="navbar-links">
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
