Created CSS for navbar

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    
     <title>Document</title>
 </head>
 <body>
     <div class="section-one">
         <div class="navbar">
-            <div class="navbar-logo">
-                Header Logo
+            <div class="navbar-left">
+                <p id="navbar-logo">Header Logo</p>
             </div>
-            <div class="navbar-links">
-                <a href="#">header link one</a>
-                <a href="#">header link two</a>
-                <a href="#">header link three</a>
+            <div class="navbar-right">
+                <a class="navlinks" href="#">header link one</a>
+                <a class="navlinks" href="#">header link two</a>
+                <a class="navlinks" href="#">header link three</a>
             </div>
         </div>
     </div>
