--- a/index.html
+++ b/index.html
@@ -10,16 +10,35 @@
 </head>
 <body>
     <div class="section-one">
+        
         <div class="navbar">
-            <div class="navbar-left">
+
+            <div class="navbar-left"> 
                 <p id="navbar-logo">Header Logo</p>
             </div>
+
             <div class="navbar-right">
                 <a class="navlinks" href="#">header link one</a>
                 <a class="navlinks" href="#">header link two</a>
                 <a class="navlinks" href="#">header link three</a>
-            </div>
+            </div
+            >
         </div>
+
+        <div class="content">
+
+            <div class="content-left">
+                <h1 id="main-text">This website is awesome</h1>
+                <p id="sub-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button type="button" id="signup-button">Sign up</button>
+            </div>
+
+            <div class="content-right">
+                <img src="stock.jpg" alt="black cat in a black and white photo" width="500">
+            </div>
+
+        </div>
+
     </div>
 </body>
 </html>
