fixed alignment issues and styled button

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <div class="content">
 
             <div class="content-left">
-                <h1 id="main-text">This website is awesome</h1>
-                <p id="sub-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <h1 id="main-text">This website is <br/>awesome</h1>
+                <p id="sub-text">This website has some subtext that goes here under the <br/>main title. It's a smaller font and the color is lower <br/>contrast</p>
                 <button type="button" id="signup-button">Sign up</button>
             </div>
 
             <div class="content-right">
-                <img src="stock.jpg" alt="black cat in a black and white photo" width="500">
+                <img src="stock.jpg" alt="black cat in a black and white photo" width="480" height="280">
             </div>
 
         </div>
