Created second section

--- a/index.html
+++ b/index.html
@@ -40,5 +40,32 @@
         </div>
 
     </div>
+
+    <div class="section-two">
+        <h2>Some Random Information.</h2>
+        <div class="blue-box-row">
+
+            <div class="blue-box">
+                <div class="blue-box"></div>
+                <p class="second-subtext">this is some subtext under an image or illustration</p>
+            </div>
+
+            <div class="blue-box">
+                <div class="blue-box"></div>
+                <p class="second-subtext">this is some subtext under an image or illustration</p>
+            </div>
+
+            <div class="blue-box">
+                <div class="blue-box"></div>
+                <p class="second-subtext">this is some subtext under an image or illustration</p>
+            </div>
+
+            <div class="blue-box">
+                <div class="blue-box"></div>
+                <p class="second-subtext">this is some subtext under an image or illustration</p>
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
