--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@
         <h2>Some Random Information.</h2>
         <div class="blue-box-row">
 
-            <div class="blue-box">
+            <div class="blue-box-msg">
                 <div class="blue-box"></div>
-                <p class="second-subtext">this is some subtext under an image or illustration</p>
+                <p class="second-subtext">this is some subtext <br/>under an illustration <br/>or image</p>
             </div>
 
-            <div class="blue-box">
+            <div class="blue-box-msg">
                 <div class="blue-box"></div>
-                <p class="second-subtext">this is some subtext under an image or illustration</p>
+                <p class="second-subtext">this is some subtext <br/>under an illustration <br/>or image</p>
             </div>
 
-            <div class="blue-box">
+            <div class="blue-box-msg">
                 <div class="blue-box"></div>
-                <p class="second-subtext">this is some subtext under an image or illustration</p>
+                <p class="second-subtext">this is some subtext <br/>under an illustration <br/>or image</p>
             </div>
 
-            <div class="blue-box">
+            <div class="blue-box-msg">
                 <div class="blue-box"></div>
-                <p class="second-subtext">this is some subtext under an image or illustration</p>
+                <p class="second-subtext">this is some subtext <br/>under an illustration <br/>or image</p>
             </div>
 
         </div>
