Created section 3 and started section 4

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+
     <div class="section-one">
         
         <div class="navbar">
@@ -21,8 +22,8 @@
                 <a class="navlinks" href="#">header link one</a>
                 <a class="navlinks" href="#">header link two</a>
                 <a class="navlinks" href="#">header link three</a>
-            </div
-            >
+            </div>
+
         </div>
 
         <div class="content">
@@ -42,6 +43,7 @@
     </div>
 
     <div class="section-two">
+
         <h2>Some Random Information.</h2>
         <div class="blue-box-row">
 
@@ -66,6 +68,34 @@
             </div>
 
         </div>
+
     </div>
+
+    <div class="section-three">
+
+        <div id="quote">
+            This is an inspiring quote, or a testimonial from a <br/>customer. Maybe it's just filling up space, or maybe <br/>people will actually read it. Who knows? All I know <br/>is that it looks nice. <br/>
+        </div>
+
+        <div id="quote-source">-Thor, God of Thunder</div>
+
+    </div>
+
+    <div class="section-four">
+
+        <div class="blue-action-box">
+
+            <div class="left-side">
+                Call to action! It's time! <br/>Sign up for our product by clicking that button right over there!
+            </div>
+
+            <div class="right-side">
+                <button type="button" id="signup-button-bottom">Sign up</button>
+            </div>
+
+        </div>
+
+    </div>
+
 </body>
 </html>
