Added HTML to section 4

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     <div class="section-four">
 
         <div class="blue-action-box">
-
+            
             <div class="left-side">
-                Call to action! It's time! <br/>Sign up for our product by clicking that button right over there!
+                <span>Call to action! It's time!</span> <br/>Sign up for our product by clicking that button right over there!
             </div>
 
             <div class="right-side">
