--- a/index.html
+++ b/index.html
@@ -97,5 +97,11 @@
 
     </div>
 
+    <div class="footer">
+
+        <p>Copyright &copy; The Odin Project 2024</p>
+
+    </div>
+
 </body>
 </html>
